tests/ui/bitfield/flags_out_of_bounds.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/flags_out_of_bounds.rs:6:17
  |
6 | struct BitField(Flags);
  |                 ^^^^^ the evaluated program panicked at 'Flags exceed the bitfield size', $DIR/tests/ui/bitfield/flags_out_of_bounds.rs:6:17
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
